<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/top_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/headline"
            android:textColor="@color/label_text_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            app:boxStrokeColor="@color/hint_box"
            app:helperText="@string/maximum"
            app:hintTextColor="@color/hint_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ids_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/ids_needed"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/hint_box"
            app:helperText="@string/maximum"
            app:hintTextColor="@color/hint_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/character_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/characters_per_id"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/document_name"
            app:boxStrokeColor="@color/hint_box"
            app:hintTextColor="@color/hint_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="@color/doc_title"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/id_characteristic_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

            <TextView
                android:id="@+id/checkBox_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label_text_color"
                android:textSize="18sp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/numbers_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/numbers_req"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="245dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/lowercase_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/lowercase_req"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="299dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/uppercase_checkBox"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:text="@string/uppercase_req"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="299dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_characteristic_layout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/email_info_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textCapSentences"
                android:text="@string/enter_email_info" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:text="@string/send_ids" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>